--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos hacer un blog post</h1>
-    <p>y este es el parrafo de inicio</p>
+    <div id-"container">
+        <div id-"post">
+            <h1>Titulo interesante del post</h1>
+            <p>Parrafo de inicio para probar las ramas de git</p>
+        </div>
+    </div>
+    
 </body>
 </html>
