--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id-"container">
+        <div id="cabecera">
+            caberera
+        </div>
         <div id-"post">
             <h1>Titulo interesante del post</h1>
             <p>Parrafo de inicio para probar las ramas de git</p>
