finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div id-"container">
+    <div id="container">
         <div id="cabecera">
-            caberera
+            Hyperblog
+            <span id="tagline"> Tu blog de confianza</span>
         </div>
         <div id-"post">
             <h1>Titulo interesante del post</h1>
