--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
         <div id-"post">
             <h1>Titulo interesante del post</h1>
             <p>Parrafo de inicio para probar las ramas de git</p>
+            <p>los blogs son la mejor forma de compartir información y tus ideas.
+                Mucho mas que ir a TouTube. Excepto si eres un rockstar.
+            </p>
         </div>
     </div>
     
