--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             Hyperblog
             <span id="tagline"> Tu blog de confianza</span>
         </div>
-        <div id-"post">
+        <div id="post">
             <h1>Titulo interesante del post</h1>
             <p>Parrafo de inicio para probar las ramas de git</p>
             <p>los blogs son la mejor forma de compartir información y tus ideas.
