--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
             <h1>Titulo interesante del post</h1>
             <p>Parrafo de inicio para probar las ramas de git</p>
             <p>los blogs son la mejor forma de compartir información y tus ideas.
-                Mucho mas que ir a TouTube. Excepto si eres un rockstar.
+                Mucho mas que ir a YouTube. Excepto si eres un rockstar.
             </p>
         </div>
     </div>
