--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,10 @@
             <p>los blogs son la mejor forma de compartir información y tus ideas.
                 Mucho mas que ir a YouTube. Excepto si eres un rockstar.
             </p>
+            <p>Suscribete y dale like</p>
+        </div>
+        <div id="footer">
+            Hecho con amor en Platzi  
         </div>
     </div>
     
