--- a/blogpost.html
+++ b/blogpost.html
@@ -16,9 +16,9 @@
         </div>
         <div id="post">
             <h1>Titulo interesante del post</h1>
-            <p>Parrafo de inicio para probar las ramas de git</p>
+            <p>Párrafo de inicio para probar las ramas de git</p>
             <p>los blogs son la mejor forma de compartir información y tus ideas.
-                Mucho mas que ir a YouTube. Excepto si eres un rockstar.
+                Mucho más que ir a YouTube. Excepto si eres un rockstar.
             </p>
             <p>Suscribete y dale like</p>
         </div>
