--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
             <p>los blogs son la mejor forma de compartir información y tus ideas.
                 Mucho más que ir a YouTube. Excepto si eres un rockstar.
             </p>
+            <p><img src="imagenes/equipo.jpg" width="100%" /> </p>
             <p>Suscribete y dale like</p>
         </div>
         <div id="footer">
